--- a/templates/Pages/admin.html.twig
+++ b/templates/Pages/admin.html.twig
@@ -26,6 +26,7 @@
                 </div>
             </div>
             <div class="form-group">
+                <input type="hidden" name="token" id="token" value="{{ csrf_token('login-form') }}"/>
                 <button type="submit" class="btn btn-primary btn-block">Log in</button>
             </div>
         </form>
